--- a/package.json
+++ b/package.json
@@ -24,11 +24,17 @@
   },
   "homepage": "https://github.com/kietchi99/K-community#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
+    "mongoose": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.4",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
